--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img :src="pathImage" alt="Svezia" />
+                    <img :src="slides[activeIndex].image" alt="Svezia" />
                     <div class="text">
                         <h3>Svezia</h3>
                         <p>
