--- a/index.html
+++ b/index.html
@@ -35,20 +35,8 @@
                 <div class="thumbs">
                     <div class="prev" @click="prevImage"></div>
                     <div class="next" @click="nextImage"></div>
-                    <div class="thumb active">
-                        <img src="img/01.jpg" alt="Svezia" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/02.jpg" alt="Svizzera" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/03.jpg" alt="Gran Bretagna" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/04.jpg" alt="Germania" />
-                    </div>
-                    <div class="thumb">
-                        <img src="img/05.jpg" alt="Paradise" />
+                    <div v-for="(item, index) in slides" class="thumb" :class="{ active: activeIndex === index }">
+                        <img :src="item.image" :alt="item.title" />
                     </div>
                 </div>
 
