--- a/index.html
+++ b/index.html
@@ -20,15 +20,10 @@
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img :src="slides[activeIndex].image" alt="Svezia" />
+                    <img :src="slides[activeIndex].image" :alt="slides[activeIndex].title" />
                     <div class="text">
-                        <h3>Svezia</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
-                        </p>
+                        <h3> {{ slides[activeIndex].title }} </h3>
+                        <p> {{ slides[activeIndex].text }} </p>
                     </div>
                 </div>
 
